MonsterAppearController 수정 및 hunt 1~10 매핑 수정 huntSelectMap 수정

--- a/src/main/resources/templates/hunt/huntSelectMap.html
+++ b/src/main/resources/templates/hunt/huntSelectMap.html
@@ -55,49 +55,47 @@
 
             <div class="buttonBox">
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/monsterappear/randomMonster1?mapNum=1'">
-                        Naxxramas</button>
-                    <p class="level">recommended level : 0~10</p>
+                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/1'">Naxxramas</button>
+                    <p class="level">recommended level : 0~50</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/monsterappear/randomMonster2?mapNum=2'">
-                        Sunwell Plateau</button>
-                    <p class="level">recommended level : 0~20</p>
+                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/2'">Sunwell Plateau</button>
+                    <p class="level">recommended level : 20~150</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/monsterappear/randomMonster3?mapNum=3'">Icecrown Citadel</button>
-                    <p class="level">recommended level : 20~30</p>
+                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/3'">Icecrown Citadel</button>
+                    <p class="level">recommended level : 100~700</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/monsterappear/randomMonster4?mapNum=4'">Dragon Soul</button>
-                    <p class="level">recommended level : 30~40</p>
+                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/4'">Dragon Soul</button>
+                    <p class="level">recommended level : 400~2500</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/monsterappear/randomMonster5?mapNum=5'">Orgrimmar</button>
-                    <p class="level">recommended level : 40~50</p>
+                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/5'">Orgrimmar</button>
+                    <p class="level">recommended level : 1500~8000</p>
                 </div>
             </div>
 
             <div class="buttonBox2">
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/monsterappear/randomMonster6?mapNum=6'">Hellfire Citadel</button>
-                    <p class="level">recommended level : 50~60</p>
+                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/6'">Hellfire Citadel</button>
+                    <p class="level">recommended level : 6000~15000</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/monsterappear/randomMonster7?mapNum=7'">Antorus</button>
-                    <p class="level">recommended level : 60~70</p>
+                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/7'">Antorus</button>
+                    <p class="level">recommended level : 9000~50000</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/monsterappear/randomMonster8?mapNum=8'">Ny'alotha</button>
-                    <p class="level">recommended level : 70~80</p>
+                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/8'">Ny'alotha</button>
+                    <p class="level">recommended level : 30000~150000</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/monsterappear/randomMonster9?mapNum=9'">Sepulcher Of The First Ones</button>
-                    <p class="level">recommended level : 80~90</p>
+                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/9'">Sepulcher Of The First Ones</button>
+                    <p class="level">recommended level : 130000~300000</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/monsterappear/randomMonster10?mapNum=10'">Aberrus</button>
-                    <p class="level">recommended level : 90~100</p>
+                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/10'">Aberrus</button>
+                    <p class="level">recommended level : 250000~500000</p>
                 </div>
             </div>
         </div>
