attackbutton 데이터 처리 완료

--- a/src/main/resources/templates/hunt/huntfail.html
+++ b/src/main/resources/templates/hunt/huntfail.html
@@ -40,7 +40,7 @@
 
   <div class="buttonBox1">
     <div>
-      <button class="resultBtn1" onclick="location.href='huntSelectMap.html'">사냥터로 가기</button>
+      <button class="resultBtn1" onclick="location.href='/map'">사냥터로 가기</button>
     </div>
     <div>
       <button class="resultBtn1" onclick="location.href='/menu'">메인으로 가기</button>
