[#87, #88] 로그인 시 비밀번호 추가

--- a/src/main/resources/templates/main/loginPage.html
+++ b/src/main/resources/templates/main/loginPage.html
@@ -38,6 +38,7 @@
 
         <form action="/user/login" method="post" class="formlogin">
             <input type="text" name="userName" placeholder="사용자의 닉네임을 입력해 주세요..." class="inputbox">
+            <input type="password" name="password" placeholder="사용자의 비밀번호를 입력해 주세요..." class="inputbox">
             <input type="submit" value="접속하기" class="loginBtn" style="cursor: url(/img/pointer_cur.png), auto">
 
         </form>
