html주소값 수정

--- a/src/main/resources/static/css/hunt.css
+++ b/src/main/resources/static/css/hunt.css
@@ -14,12 +14,25 @@
     text-decoration: none;
     color: black;
   }
-body{    font-family: "neon";
-    color: white;
+body{
+    font-family: "neon";
     animation: fadein 2000ms ease-out;
     -moz-animation: fadein 2000ms ease-out; /* Firefox */
     -webkit-animation: fadein 2000ms ease-out; /* Safari and  Chrome */
     -o-animation: fadein 2000ms ease-out; /* Opera */
+    cursor: url("/img/pointer4.png"), auto;
+}
+input{
+    cursor: url("/img/pointer_cur.png"), auto;
+}
+.buttonBox .huntBtnBox .huntBtn{
+    cursor: url("/img/pointer_cur.png"), auto;
+}
+.buttonBox2 .huntBtnBox .huntBtn{
+    cursor: url("/img/pointer_cur.png"), auto;
+}
+.userinfo .usertype{
+    cursor: url("/img/pointer_cur.png"), auto;
 }
 @keyframes fadein {
     from {opacity:0;}
