--- a/src/main/resources/templates/hunt/huntSelectMap.html
+++ b/src/main/resources/templates/hunt/huntSelectMap.html
@@ -46,7 +46,7 @@
                     <p class="userLevel" th:text="'Level : '+${userLevel}"></p>
                     <p class="userLevel" th:text="'HP : '+${userTotalHp}"></p>
                     <p class="userLevel" th:text="'STR : '+${userTotalSTR}"></p>
-                    <p class="userLevel" th:text="'TPYE : '+${userType}"></p>
+                    <p class="userLevel" th:text="'TYPE : '+${userType}"></p>
 
                 </div>
                 <button class="usertype" onclick="location.href='/user/type'" style="cursor: url(/img/pointer_cur.png), auto">Type Change</button>
@@ -60,42 +60,42 @@
                     <p class="level">recommended level : 0~50</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/2'">Sunwell Plateau</button>
+                    <button class="huntBtn" onclick="location.href='/map/2'">Sunwell Plateau</button>
                     <p class="level">recommended level : 20~150</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/3'">Icecrown Citadel</button>
+                    <button class="huntBtn" onclick="location.href='/map/3'">Icecrown Citadel</button>
                     <p class="level">recommended level : 100~700</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/4'">Dragon Soul</button>
+                    <button class="huntBtn" onclick="location.href='/map/4'">Dragon Soul</button>
                     <p class="level">recommended level : 400~2500</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/5'">Orgrimmar</button>
+                    <button class="huntBtn" onclick="location.href='/map/5'">Orgrimmar</button>
                     <p class="level">recommended level : 1500~8000</p>
                 </div>
             </div>
 
             <div class="buttonBox2">
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/6'">Hellfire Citadel</button>
+                    <button class="huntBtn" onclick="location.href='/map/6'">Hellfire Citadel</button>
                     <p class="level">recommended level : 6000~15000</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/7'">Antorus</button>
+                    <button class="huntBtn" onclick="location.href='/map/7'">Antorus</button>
                     <p class="level">recommended level : 9000~50000</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/8'">Ny'alotha</button>
+                    <button class="huntBtn" onclick="location.href='/map/8'">Ny'alotha</button>
                     <p class="level">recommended level : 30000~150000</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/9'">Sepulcher Of The First Ones</button>
+                    <button class="huntBtn" onclick="location.href='/map/9'">Sepulcher Of The First Ones</button>
                     <p class="level">recommended level : 130000~300000</p>
                 </div>
                 <div class="huntBtnBox">
-                    <button class="huntBtn" onclick="location.href='/hunt/huntMap/10'">Aberrus</button>
+                    <button class="huntBtn" onclick="location.href='/map/10'">Aberrus</button>
                     <p class="level">recommended level : 250000~500000</p>
                 </div>
             </div>
