--- a/src/main/resources/templates/hunt/huntfail.html
+++ b/src/main/resources/templates/hunt/huntfail.html
@@ -26,6 +26,7 @@
 <body>
 <div id="WrapperFail">
   <div id="title">
+    <input type="date">
     <p class="titleMessage" onclick="location.href='index.html'">소드마스터의 시대가 오고있다!</p>
   </div>
   <div class="titlebox">
