mouse pointer settings upgrade.css, hunt.css

--- a/src/main/resources/static/css/hunt.css
+++ b/src/main/resources/static/css/hunt.css
@@ -34,6 +34,9 @@ input{
 .userinfo .usertype{
     cursor: url("/img/pointer_cur.png"), auto;
 }
+.btnBox button:hover{
+    cursor: url("/img/pointer_cur.png"), auto;
+}
 @keyframes fadein {
     from {opacity:0;}
     to {opacity:1;}
