--- a/src/main/resources/static/css/type.css
+++ b/src/main/resources/static/css/type.css
@@ -35,6 +35,12 @@ input{
 .userinfo .usertype{
   cursor: url("/img/pointer_cur.png"), auto;
 }
+.typeBtn:hover .tbtn:hover{
+  cursor: url("/img/pointer_cur.png"), auto;
+}
+.backToMenu:hover{
+  cursor: url("/img/pointer_cur.png"), auto;
+}
 @keyframes fadein {
   from {opacity:0;}
   to {opacity:1;}
