--- a/src/main/resources/static/css/upgrade.css
+++ b/src/main/resources/static/css/upgrade.css
@@ -34,6 +34,14 @@ input{
 .userinfo .usertype{
     cursor: url("/img/pointer_cur.png"), auto;
 }
+.buttonBox1:hover .upgradeBtn:hover{
+    cursor: url("/img/pointer_cur.png"), auto;
+}
+
+.resultBtn:hover{
+    cursor: url("/img/pointer_cur.png"), auto;
+}
+
 @keyframes fadein {
     from {opacity:0;}
     to {opacity:1;}
