mouse pointer settings hunt result page

--- a/src/main/resources/static/css/hunt.css
+++ b/src/main/resources/static/css/hunt.css
@@ -256,7 +256,6 @@ input{
     width: 400px;
     margin: 0 auto;
     text-align: center;
-    
 }
 .buttonBox1{
     width: 400px;
@@ -273,7 +272,6 @@ input{
     background-color: brown;
     border-radius: 10px;
     color: yellow;
-   
 }
 
 .buttonBox1 div .resultBtn1{
@@ -283,5 +281,7 @@ input{
     background-color: brown;
     border-radius: 10px;
     color: yellow;
-
+}
+.buttonBox .resultBtn:hover{
+    cursor: url("/img/pointer_cur.png"), auto;
 }
