--- a/src/main/resources/templates/hunt/huntResult.html
+++ b/src/main/resources/templates/hunt/huntResult.html
@@ -29,6 +29,12 @@
            <div>
             <p th:text="'획득 경험치 :'+${session.integrateUserAttackDTO.getUserAttackDTO().getMonster().getRewardExp().getValue()}">획득 경험치: 300exp</p>
             <p th:text="'획득 골드 :'+${session.integrateUserAttackDTO.getUserAttackDTO().getMonster().getRewardMoney().getValue()}">획득 골드: 3000G</p>
+           <script th:inline="javascript">
+               var message = [[${session.huntLog}]];
+               alert(message);
+               sessionStorage.removeItem("integrateUserAttackDTO");
+               sessionStorage.removeItem("integrateMonsterAttackDTO");
+           </script>
            </div>
         </div>
 
