--- a/src/main/resources/templates/hunt/huntfail.html
+++ b/src/main/resources/templates/hunt/huntfail.html
@@ -34,7 +34,12 @@
 
   <div class="result">
     <div>
-
+      <script th:inline="javascript">
+        var message = [[${session.huntLog}]];
+        alert(message);
+        sessionStorage.removeItem("integrateUserAttackDTO");
+        sessionStorage.removeItem("integrateMonsterAttackDTO");
+      </script>
     </div>
   </div>
 
