--- a/src/main/resources/templates/main/menu.html
+++ b/src/main/resources/templates/main/menu.html
@@ -35,7 +35,7 @@
             </p>
 
             <h1 th:text="|Welcome ${session.userName}!!|" class="titleW"></h1>
-            <div>
+            <div id="menuBtnBox">
                 <div class="menuBtn">
                     <button type="button" class="huntmapBtn" onclick="location.href='/map'" style="cursor: url(/img/pointer_cur.png), auto">Hunt Map</button>
                 </div>
