[#115] 한글로 되어있는 버튼 영어로 바꿈 hunt result page

--- a/src/main/resources/templates/hunt/huntResult.html
+++ b/src/main/resources/templates/hunt/huntResult.html
@@ -42,10 +42,10 @@
 
         <div class="buttonBox">
             <div>
-                <button class="resultBtn" onclick="location.href='/map'">사냥터로 가기</button>
+                <button class="resultBtn" onclick="location.href='/map'">Select Map</button>
             </div>
             <div>
-                <button class="resultBtn" onclick="location.href='/menu'">메인으로 가기</button>
+                <button class="resultBtn" onclick="location.href='/menu'">Main</button>
             </div>
         </div>
 
