--- a/src/main/resources/templates/hunt/huntfail.html
+++ b/src/main/resources/templates/hunt/huntfail.html
@@ -46,10 +46,10 @@
 
   <div class="buttonBox1">
     <div>
-      <button class="resultBtn1" onclick="location.href='/map'">사냥터로 가기</button>
+      <button class="resultBtn1" onclick="location.href='/map'">Select Map</button>
     </div>
     <div>
-      <button class="resultBtn1" onclick="location.href='/menu'">메인으로 가기</button>
+      <button class="resultBtn1" onclick="location.href='/menu'">Main</button>
     </div>
   </div>
 
