[#118] 헌트 성공/실패시 배경음악 설정

--- a/src/main/resources/templates/hunt/huntfail.html
+++ b/src/main/resources/templates/hunt/huntfail.html
@@ -24,6 +24,10 @@
 </head>
 
 <body>
+<audio autoplay>
+  <source src="/img/hunt-lose.wav" type="audio/wav">
+</audio>
+
 <div id="WrapperFail">
   <div id="title">
 
