--- a/src/main/resources/templates/hunt/huntResult.html
+++ b/src/main/resources/templates/hunt/huntResult.html
@@ -17,6 +17,10 @@
 </head>
 
 <body>
+<audio autoplay>
+    <source src="/img/hunt_win.wav" type="audio/wav">
+</audio>
+
     <div id="WrapperResult">
         <div id="title">
             <p class="titleMessage" onclick="location.href='index.html'">소드마스터의 시대가 오고있다!</p>
