[#124] 헌트맵(1~10), 속성 선택, 강화/강화결과화면 배경음악 설정

--- a/src/main/resources/templates/hunt/huntmaps/hunt9.html
+++ b/src/main/resources/templates/hunt/huntmaps/hunt9.html
@@ -32,6 +32,9 @@
 </head>
 
 <body>
+<audio autoplay>
+    <source src="/img/hunt4.m4a">
+</audio>
 <div id="Wrapper9">
     <div id="title">
         <p class="titleMessage" onclick="location.href='/index.html'">소드마스터의 시대가 오고있다!</p>
