--- a/src/main/resources/templates/user/type.html
+++ b/src/main/resources/templates/user/type.html
@@ -31,6 +31,9 @@
 </head>
 
 <body>
+<audio autoplay>
+    <source src="/img/element.m4a">
+</audio>
   <div id="Wrapper">
 
     <div id="title" onclick="location.href='/index.html'">
