--- a/src/main/resources/templates/hunt/huntSelectMap.html
+++ b/src/main/resources/templates/hunt/huntSelectMap.html
@@ -31,6 +31,10 @@
 </head>
 
 <body>
+<audio autoplay>
+    <source src="/img/select.m4a">
+</audio>
+
 <div id="Wrapper3">
     <div id="title">
         <p class="titleMessage" onclick="location.href='/index.html'">소드마스터의 시대가 오고있다!</p>
