--- a/src/main/resources/templates/hunt/huntmaps/hunt2.html
+++ b/src/main/resources/templates/hunt/huntmaps/hunt2.html
@@ -32,6 +32,9 @@
 </head>
 
 <body>
+<audio autoplay>
+    <source src="/img/hunt2.m4a">
+</audio>
 <div id="Wrapper2">
     <div id="title">
         <p class="titleMessage" onclick="location.href='/index.html'">소드마스터의 시대가 오고있다!</p>
