--- a/src/main/resources/templates/upgrade/upgrade.html
+++ b/src/main/resources/templates/upgrade/upgrade.html
@@ -17,6 +17,9 @@
 </head>
 
 <body>
+<audio autoplay>
+    <source src="/img/upgrade.m4a">
+</audio>
     <div id="Wrapper">
         <div id="title">
             <p class="titleMessage" onclick="location.href='/index.html'">소드마스터의 시대가 오고있다!</p>
