type css 수정 및 쓰지않는 클래스 정리

--- a/src/main/resources/static/css/type.css
+++ b/src/main/resources/static/css/type.css
@@ -93,6 +93,14 @@ input{
 
   margin: 0 auto;
 }
+.nowType{
+  color: beige;
+  width: 400px;
+  margin: 0px auto;
+  text-align: center;
+  position: relative;
+  top: 300px;
+}
 .typeWrapper{
   margin-top: 400px;
   display: flex;
