--- a/src/main/resources/templates/user/type.html
+++ b/src/main/resources/templates/user/type.html
@@ -41,7 +41,7 @@
       <h1>Type Change</h1>
   </div>
       <div class="typeSelect">
-          <h1 th:text="'현재 속성 : '+${userType}"></h1>
+          <h1 th:text="'현재 속성 : '+${userType}" class="nowType"></h1>
           <form action="/user/changeType" method="post">
         <ul class="typeWrapper">
           <li class="typeList">
